--- a/r5dev/vproj/clientsdk.vcxproj.filters
+++ b/r5dev/vproj/clientsdk.vcxproj.filters
@@ -657,6 +657,9 @@
     <ClCompile Include="..\game\shared\collisionproperty.cpp">
       <Filter>sdk\game\shared</Filter>
     </ClCompile>
+    <ClCompile Include="..\game\shared\entitylist_base.cpp">
+      <Filter>sdk\game\shared</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\client\cdll_engine_int.h">
@@ -1920,6 +1923,12 @@
       <Filter>sdk\game\shared</Filter>
     </ClInclude>
     <ClInclude Include="..\game\shared\ehandle.h">
+      <Filter>sdk\game\shared</Filter>
+    </ClInclude>
+    <ClInclude Include="..\game\shared\entitylist_base.h">
+      <Filter>sdk\game\shared</Filter>
+    </ClInclude>
+    <ClInclude Include="..\game\shared\shareddefs.h">
       <Filter>sdk\game\shared</Filter>
     </ClInclude>
   </ItemGroup>
