Add server movehelper to SDK
Initial implementation of server movehelper. IMoveHelper interface class is fully reversed and aligns with implementation in engine. CMoveHelperServer is also reversed, excect for CGameTrace, though this isn't necessary for now.

--- a/r5dev/vproj/clientsdk.vcxproj
+++ b/r5dev/vproj/clientsdk.vcxproj
@@ -236,6 +236,7 @@
     <ClInclude Include="..\game\shared\collisionproperty.h" />
     <ClInclude Include="..\game\shared\ehandle.h" />
     <ClInclude Include="..\game\shared\entitylist_base.h" />
+    <ClInclude Include="..\game\shared\imovehelper.h" />
     <ClInclude Include="..\game\shared\playernet_vars.h" />
     <ClInclude Include="..\game\shared\predictioncopy.h" />
     <ClInclude Include="..\game\shared\shareddefs.h" />
