--- a/r5dev/vproj/dedicated.vcxproj.filters
+++ b/r5dev/vproj/dedicated.vcxproj.filters
@@ -1365,6 +1365,12 @@
     <ClInclude Include="..\game\shared\usercmd.h">
       <Filter>sdk\game\shared</Filter>
     </ClInclude>
+    <ClInclude Include="..\game\server\movehelper_server.h">
+      <Filter>sdk\game\server</Filter>
+    </ClInclude>
+    <ClInclude Include="..\game\shared\imovehelper.h">
+      <Filter>sdk\game\shared</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\common\opcodes.cpp">
@@ -1720,6 +1726,9 @@
     </ClCompile>
     <ClCompile Include="..\public\baseentity.cpp">
       <Filter>sdk\public</Filter>
+    </ClCompile>
+    <ClCompile Include="..\game\server\movehelper_server.cpp">
+      <Filter>sdk\game\server</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
