--- a/r5dev/vproj/clientsdk.vcxproj.filters
+++ b/r5dev/vproj/clientsdk.vcxproj.filters
@@ -660,6 +660,9 @@
     <ClCompile Include="..\game\shared\entitylist_base.cpp">
       <Filter>sdk\game\shared</Filter>
     </ClCompile>
+    <ClCompile Include="..\game\client\movehelper_client.cpp">
+      <Filter>sdk\game\client</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\client\cdll_engine_int.h">
@@ -1936,6 +1939,9 @@
     </ClInclude>
     <ClInclude Include="..\game\shared\imovehelper.h">
       <Filter>sdk\game\shared</Filter>
+    </ClInclude>
+    <ClInclude Include="..\game\client\movehelper_client.h">
+      <Filter>sdk\game\client</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
