--- a/r5dev/vproj/gamesdk.vcxproj
+++ b/r5dev/vproj/gamesdk.vcxproj
@@ -63,6 +63,7 @@
     <ClCompile Include="..\gameui\IConsole.cpp" />
     <ClCompile Include="..\gameui\IBrowser.cpp" />
     <ClCompile Include="..\game\client\c_baseentity.cpp" />
+    <ClCompile Include="..\game\client\movehelper_client.cpp" />
     <ClCompile Include="..\game\client\spritemodel.cpp" />
     <ClCompile Include="..\game\client\viewrender.cpp" />
     <ClCompile Include="..\game\server\ai_network.cpp" />
@@ -250,6 +251,7 @@
     <ClInclude Include="..\game\client\c_baseplayer.h" />
     <ClInclude Include="..\game\client\enginesprite.h" />
     <ClInclude Include="..\game\client\hud.h" />
+    <ClInclude Include="..\game\client\movehelper_client.h" />
     <ClInclude Include="..\game\client\viewrender.h" />
     <ClInclude Include="..\game\server\ai_network.h" />
     <ClInclude Include="..\game\server\ai_networkmanager.h" />
