--- a/r5dev/vproj/dedicated.vcxproj.filters
+++ b/r5dev/vproj/dedicated.vcxproj.filters
@@ -1371,6 +1371,9 @@
     <ClInclude Include="..\game\shared\imovehelper.h">
       <Filter>sdk\game\shared</Filter>
     </ClInclude>
+    <ClInclude Include="..\game\server\physics_main.h">
+      <Filter>sdk\game\server</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\common\opcodes.cpp">
@@ -1728,6 +1731,9 @@
       <Filter>sdk\public</Filter>
     </ClCompile>
     <ClCompile Include="..\game\server\movehelper_server.cpp">
+      <Filter>sdk\game\server</Filter>
+    </ClCompile>
+    <ClCompile Include="..\game\server\physics_main.cpp">
       <Filter>sdk\game\server</Filter>
     </ClCompile>
   </ItemGroup>
