--- a/r5dev/vproj/clientsdk.vcxproj.filters
+++ b/r5dev/vproj/clientsdk.vcxproj.filters
@@ -663,6 +663,9 @@
     <ClCompile Include="..\game\client\movehelper_client.cpp">
       <Filter>sdk\game\client</Filter>
     </ClCompile>
+    <ClCompile Include="..\game\shared\util_shared.cpp">
+      <Filter>sdk\game\shared</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\client\cdll_engine_int.h">
@@ -1941,6 +1944,12 @@
       <Filter>sdk\game\shared</Filter>
     </ClInclude>
     <ClInclude Include="..\game\client\movehelper_client.h">
+      <Filter>sdk\game\client</Filter>
+    </ClInclude>
+    <ClInclude Include="..\game\shared\util_shared.h">
+      <Filter>sdk\game\shared</Filter>
+    </ClInclude>
+    <ClInclude Include="..\game\client\cliententitylist.h">
       <Filter>sdk\game\client</Filter>
     </ClInclude>
   </ItemGroup>
