--- a/r5dev/vproj/dedicated.vcxproj
+++ b/r5dev/vproj/dedicated.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="..\engine\host.h" />
     <ClInclude Include="..\engine\host_cmd.h" />
     <ClInclude Include="..\engine\host_state.h" />
+    <ClInclude Include="..\engine\modelinfo.h" />
     <ClInclude Include="..\engine\modelloader.h" />
     <ClInclude Include="..\engine\net.h" />
     <ClInclude Include="..\engine\networkstringtable.h" />
@@ -247,6 +248,7 @@
     <ClInclude Include="..\public\eiface.h" />
     <ClInclude Include="..\public\engine\ICollideable.h" />
     <ClInclude Include="..\public\engine\IEngineTrace.h" />
+    <ClInclude Include="..\public\engine\IVModelInfo.h" />
     <ClInclude Include="..\public\gametrace.h" />
     <ClInclude Include="..\public\iengine.h" />
     <ClInclude Include="..\public\client_class.h" />
@@ -543,6 +545,7 @@
     <ClCompile Include="..\engine\host.cpp" />
     <ClCompile Include="..\engine\host_cmd.cpp" />
     <ClCompile Include="..\engine\host_state.cpp" />
+    <ClCompile Include="..\engine\modelinfo.cpp" />
     <ClCompile Include="..\engine\modelloader.cpp" />
     <ClCompile Include="..\engine\net.cpp" />
     <ClCompile Include="..\engine\networkstringtable.cpp" />
@@ -560,6 +563,7 @@
     <ClCompile Include="..\game\server\ai_network.cpp" />
     <ClCompile Include="..\game\server\ai_networkmanager.cpp" />
     <ClCompile Include="..\game\server\ai_utility.cpp" />
+    <ClCompile Include="..\game\server\baseanimating.cpp" />
     <ClCompile Include="..\game\server\gameinterface.cpp" />
     <ClCompile Include="..\game\server\movehelper_server.cpp" />
     <ClCompile Include="..\game\server\networkproperty.cpp" />
