--- a/r5dev/vproj/dedicated.vcxproj.filters
+++ b/r5dev/vproj/dedicated.vcxproj.filters
@@ -1392,6 +1392,12 @@
     <ClInclude Include="..\public\bspflags.h">
       <Filter>sdk\public</Filter>
     </ClInclude>
+    <ClInclude Include="..\public\engine\IVModelInfo.h">
+      <Filter>sdk\public\engine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\engine\modelinfo.h">
+      <Filter>sdk\engine</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\common\opcodes.cpp">
@@ -1756,6 +1762,12 @@
     </ClCompile>
     <ClCompile Include="..\game\shared\util_shared.cpp">
       <Filter>sdk\game\shared</Filter>
+    </ClCompile>
+    <ClCompile Include="..\game\server\baseanimating.cpp">
+      <Filter>sdk\game\server</Filter>
+    </ClCompile>
+    <ClCompile Include="..\engine\modelinfo.cpp">
+      <Filter>sdk\engine</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
