--- a/r5dev/vproj/dedicated.vcxproj
+++ b/r5dev/vproj/dedicated.vcxproj
@@ -183,7 +183,9 @@
     <ClInclude Include="..\game\server\baseanimatingoverlay.h" />
     <ClInclude Include="..\game\server\baseanimating.h" />
     <ClInclude Include="..\game\server\basecombatcharacter.h" />
+    <ClInclude Include="..\game\server\baseentity.h" />
     <ClInclude Include="..\game\server\detour_impl.h" />
+    <ClInclude Include="..\game\server\entitylist.h" />
     <ClInclude Include="..\game\server\fairfight_impl.h" />
     <ClInclude Include="..\game\server\gameinterface.h" />
     <ClInclude Include="..\game\server\movehelper_server.h" />
@@ -238,7 +240,6 @@
     <ClInclude Include="..\protoc\cl_rcon.pb.h" />
     <ClInclude Include="..\protoc\sig_map.pb.h" />
     <ClInclude Include="..\protoc\sv_rcon.pb.h" />
-    <ClInclude Include="..\public\baseentity.h" />
     <ClInclude Include="..\public\basehandle.h" />
     <ClInclude Include="..\public\bspflags.h" />
     <ClInclude Include="..\public\cmodel.h" />
@@ -564,6 +565,8 @@
     <ClCompile Include="..\game\server\ai_networkmanager.cpp" />
     <ClCompile Include="..\game\server\ai_utility.cpp" />
     <ClCompile Include="..\game\server\baseanimating.cpp" />
+    <ClCompile Include="..\game\server\baseentity.cpp" />
+    <ClCompile Include="..\game\server\entitylist.cpp" />
     <ClCompile Include="..\game\server\gameinterface.cpp" />
     <ClCompile Include="..\game\server\movehelper_server.cpp" />
     <ClCompile Include="..\game\server\networkproperty.cpp" />
@@ -608,7 +611,6 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="..\public\baseentity.cpp" />
     <ClCompile Include="..\public\datamap.cpp" />
     <ClCompile Include="..\public\networkvar.cpp" />
     <ClCompile Include="..\public\utility\binstream.cpp" />
