--- a/r5dev/vproj/gamesdk.vcxproj.filters
+++ b/r5dev/vproj/gamesdk.vcxproj.filters
@@ -708,9 +708,6 @@
     <ClCompile Include="..\game\server\player.cpp">
       <Filter>sdk\game\server</Filter>
     </ClCompile>
-    <ClCompile Include="..\public\baseentity.cpp">
-      <Filter>sdk\public</Filter>
-    </ClCompile>
     <ClCompile Include="..\game\server\movehelper_server.cpp">
       <Filter>sdk\game\server</Filter>
     </ClCompile>
@@ -728,6 +725,12 @@
     </ClCompile>
     <ClCompile Include="..\engine\modelinfo.cpp">
       <Filter>sdk\engine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\game\server\entitylist.cpp">
+      <Filter>sdk\game\server</Filter>
+    </ClCompile>
+    <ClCompile Include="..\game\server\baseentity.cpp">
+      <Filter>sdk\game\server</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -2039,9 +2042,6 @@
     <ClInclude Include="..\public\string_t.h">
       <Filter>sdk\public</Filter>
     </ClInclude>
-    <ClInclude Include="..\public\baseentity.h">
-      <Filter>sdk\public</Filter>
-    </ClInclude>
     <ClInclude Include="..\game\server\networkproperty.h">
       <Filter>sdk\game\server</Filter>
     </ClInclude>
@@ -2134,6 +2134,12 @@
     </ClInclude>
     <ClInclude Include="..\engine\modelinfo.h">
       <Filter>sdk\engine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\game\server\entitylist.h">
+      <Filter>sdk\game\server</Filter>
+    </ClInclude>
+    <ClInclude Include="..\game\server\baseentity.h">
+      <Filter>sdk\game\server</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
